--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "Sayf El Kaddouri"
 title_separator          : "-"
 name                     : "Sayf"
-description              : "Computer Science and Engineering Student "
+description              : "Computer Science and Artificial Intelligence student at Leiden University "
 url                      : # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -108,8 +108,8 @@ analytics:
 author:
   name             : "Sayf"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "Computer Science and Engineering Student"
-  location         : "Netherlands"
+  bio              : "Computer Science and Artificial Intelligence student"
+  location         : "The Netherlands"
   email            :
   links:
     - label: "Email"
@@ -130,6 +130,10 @@ author:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url: "https://instagram.com/"
+    - label: "LinkedIn"
+      icon: "fab fa-fw LinkedIn"
+      # url: "https://nl.linkedin.com/in/sayfkadd"
+
 
 # Site Footer
 footer:
@@ -152,6 +156,9 @@ footer:
     - label: "Instagram"
       icon: "fab fa-fw fa-instagram"
       # url:
+    - label: "LinkedIn"
+      icon: "fab fa-fw LinkedIn"
+      # url: "https://nl.linkedin.com/in/sayfkadd"
 
 
 # Reading Files
